Linked zone from root scope to bottom directive scope Cleaning Add filter hrrToBpmFilter and apply it Using 2 angular directive instead of 1: A global directive healthCustomZones for managing zone A unit directive hrZone add controllerFunction Inject first values inside customHeartRateZone directive Initialize customHeartRateZone directive

--- a/hook/extension/pages/app/index.html
+++ b/hook/extension/pages/app/index.html
@@ -39,6 +39,13 @@
 
     <!-- Angular services -->
     <script src="services/Notifier.js"></script>
+
+    <!-- Angular directives -->
+    <script src="directives/HealthCustomZones.js"></script>
+    <script src="directives/HrZone.js"></script>
+
+    <!-- Angular filters -->
+    <script src="filters/HrrToBpmFilter.js"></script>
 </body>
 
 </html>
