--- a/hook/extension/options/app/index.html
+++ b/hook/extension/options/app/index.html
@@ -39,6 +39,7 @@
 
     <!-- Angular services -->
     <script src="services/Notifier.js"></script>
+    <script src="services/AvoidInputKeys.js"></script>
 
     <!-- Angular directives -->
     <script src="directives/HealthCustomZones.js"></script>
